# rmk-cli

./: Cargo.toml  README.md  vial.json
src/: args.rs  chip.rs  keyboard_toml.rs  main.rs
