[package]
name = "rmk-cli"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "RMK CLI is a tool that parses `keybaord.toml` and `vial.json`, generates RMK project."
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.18", git = "https://github.com/clap-rs/clap", tag = "v4.5.20", features = [
    "derive",
    "string",
] }
rmk-config = { version = "0.2.0", features = ["toml"] }
toml = "0.8"
serde = "1.0"
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }
tokio = { version = "1", features = ["full"] }
zip = "2.2"
futures = "0.3"
futures-util = "0.3.31"
walkdir = "2"
inquire = "0.7.5"
